--- a/css/profile.less
+++ b/css/profile.less
@@ -20,6 +20,29 @@
         margin-top: 10px;
         margin-bottom: 10px;
       }
+      .field-editable {
+        display: flex;
+        flex-direction: column;
+
+        .display-name {
+          font-size: 20px;
+
+          .action {
+            margin-right: 10px;
+            margin-top: 6px;
+          }
+        }
+        .actions {
+          margin-top: 8px;
+          display: flex;
+          justify-content: flex-end;
+          margin-left: 10px;
+          button {
+            margin-right: 10px;
+            // margin-left: 10px;
+          } 
+        }
+      }
       .field-value {
         display: flex;
 
@@ -36,8 +59,13 @@
         .action {
           // font-size: 
           margin-left: 10px;
-          font-size: 26px;
-          color: #173e43;
+          font-size: 22px;
+          color: @prologes-action-default;
+
+          &:focus,
+          &:hover {
+            color: @prologes-action-hover;
+          }
         }
       }
     }
