Update content for short prologes

--- a/templates/user_book.html
+++ b/templates/user_book.html
@@ -155,7 +155,7 @@
                       </div>
                       <div class="content">
                         <div class="prologue">
-                          Some average text about a book and how cool it was reading it. On average we are talking about 200 characters.
+                          Some short text.
                         </div>
                         <div class="rating">
                           <span class="fas fa-star"></span>
@@ -165,7 +165,7 @@
                           <span class="far fa-star"></span>
                         </div>
                         <div class="signature">
-                            <a href="#">username</a>
+                            <a href="#" title="realusername">username</a>
                           </div>
                         <div class="voting"></div>
                       </div>
