--- a/css/book.less
+++ b/css/book.less
@@ -273,3 +273,33 @@
     }
   }
 }
+
+.prologe-modal {
+  .feedback-textarea {
+    padding: 10px 0;
+    font-size: 16px;
+    color: #173e43;
+    textarea {
+      width: 100%;
+      height: 200px;
+    }
+  }
+
+  .rating {
+    margin-top: 30px;
+    font-size: 18px;
+    color: #173e43;
+  }
+
+  .rating.required {
+    color: @prologes-red;
+  }
+
+  .actions {
+    display: flex;
+    justify-content: center;
+    .main-btn {
+      width: 33%;
+    }
+  }
+}
