--- a/css/comments.less
+++ b/css/comments.less
@@ -45,3 +45,109 @@
 		}
 	}
 }
+
+.thread {
+	// Border bottom makes it look reddit like
+	// border-bottom: 1px solid #3fb0ac;
+	margin-bottom: 5px;
+
+	.thread-nest {
+		padding-left: 10px;
+		border-left: 2px solid #3fb0ac;
+		margin-left: 4px;
+	}
+
+	.comment {
+
+		background-color: #fff;
+		border: 1px solid #e4e4e4;
+		border-radius: 4px;
+		margin-bottom: 7px;
+		padding-left: 10px;
+		display: flex;
+
+		.content {
+			display: flex;
+			flex-direction: column;
+			margin-left: 5px;
+
+			.header {
+				font-size: 12px;
+				color: grey;
+				margin-top: 3px;
+				margin-left: 5px;
+
+				.poster {
+					background-color: #3fb0ac;
+					font-size: 12px;
+					line-height: 1.8em;
+					margin-right: 5px;
+					border-radius: 3px;
+					color: #fff;
+					text-align: center;
+					font-weight: 600;
+
+					span {
+						font-size: 75%;
+						padding: .2em .6em .3em;
+						vertical-align: baseline;
+					}
+
+					&:hover {
+						text-decoration: none!important;
+					}
+				}
+			}
+
+			.text {
+				font-size: 12px;
+				margin-top: 4px;
+			}
+
+			.footer {
+				font-size: 12px;
+				color: grey;
+				margin-left: 5px;
+				margin-top: 4px;
+				margin-bottom: 1px;
+
+				span {
+					margin-right: 8px;
+
+					&:hover {
+						cursor: pointer;
+					}
+				}
+			}
+		}
+
+		.icon {
+			// margin-top: 5px;
+			margin-right: 8px;
+			img {
+				width: 40px;
+				height: 40px;
+				border-radius: 50%;
+			}
+		}
+	}
+}
+
+/*
+
+.reply-form--actions {
+	display: flex;
+	flex-direction: column;
+}
+
+.user-span-link:hover {
+	text-decoration: none!important;
+}
+
+.user-label {
+	background-color: #3fb0ac;
+	font-size: 12px;
+	line-height: 1.8em;
+	margin-right: 5px;
+}
+*/
