--- a/templates/admin_group.html
+++ b/templates/admin_group.html
@@ -160,6 +160,38 @@
 
 				<div class="main-group--threads" id="main-group--threads">
 					<!-- Here be the past threads -->
+					<!-- Here be the past threads -->
+					<div class="thread">
+							<div class="comment">
+								<div class="icon">
+									<img class="" src="../img/user_clear.png">
+								</div>
+								<div class="content">
+									<div class="header">
+										<a class="poster" href="./user.php?i=25"><span>someUsername</span></a>20 days ago
+									</div>
+									<div class="text">The second thread</div>
+									<div class="footer"><span>[Collapse]</span><span>[Reply]</span></div>
+								</div>
+							</div>
+							<div class="thread-nest">
+								<div class="thread">
+									<div class="comment">
+										<div class="icon">
+											<img class="" src="../img/user_dark.png">
+										</div>
+										<div class="content">
+											<div class="header">
+												<a class="poster" href="./user.php?i=25"><span class="user-label label">someUsername</span></a>20 days ago
+											</div>
+											<div class="text">Ok so replying to the original thread...</div>
+											<div class="footer"><span>[Reply]</span></div>
+										</div>
+									</div>
+									<div class="thread-nest"></div></div><div class="thread"><div class="comment"><div class="icon"><img class="" src="../img/user_dark.png"></div><div class="content"><div class="header"><a class="poster" href="./user.php?i=25"><span class="user-label label">someUsername</span></a>20 days ago</div><div class="text">Was this really necessary?</div><div class="footer"><span>[Collapse]</span><span>[Reply]</span></div></div></div><div class="thread-nest"><div class="thread"><div class="comment"><div class="icon"><img class="" src="../img/user_dark.png"></div><div class="content"><div class="header"><a class="poster" href="./user.php?i=25"><span class="user-label label">someUsername</span></a>20 days ago</div><div class="text">And this?</div><div class="footer"><span>[Reply]</span></div></div></div><div class="thread-nest"></div></div></div></div></div></div>
+						<!-- Sample thread 2 -->
+						<div class="thread"><div class="comment"><div class="icon"><img class="" src="../img/user_dark.png"></div><div class="content"><div class="header"><a class="poster" href="./user.php?i=25"><span class="user-label label">someUsername</span></a>20 days ago</div><div class="text">The second thread</div><div class="footer"><span>[Collapse]</span><span>[Reply]</span></div></div></div><div class="thread-nest"><div class="thread"><div class="comment"><div class="icon"><img class="" src="../img/user_dark.png"></div><div class="content"><div class="header"><a class="poster" href="./user.php?i=25"><span class="user-label label">someUsername</span></a>20 days ago</div><div class="text">Ok so replying to the original thread...</div><div class="footer"><span>[Reply]</span></div></div></div><div class="thread-nest"></div></div><div class="thread"><div class="comment"><div class="icon"><img class="" src="../img/user_dark.png"></div><div class="content"><div class="header"><a class="poster" href="./user.php?i=25"><span class="user-label label">someUsername</span></a>20 days ago</div><div class="text">Was this really necessary?</div><div class="footer"><span>[Collapse]</span><span>[Reply]</span></div></div></div><div class="thread-nest"><div class="thread"><div class="comment"><div class="icon"><img class="" src="../img/user_dark.png"></div><div class="content"><div class="header"><a class="poster" href="./user.php?i=25"><span class="user-label label">someUsername</span></a>20 days ago</div><div class="text">And this?</div><div class="footer"><span>[Reply]</span></div></div></div><div class="thread-nest"></div></div></div></div></div></div>
+						<!-- END COMMENT SAMPLE-->
 				</div>
 			</section>
 		</div>
@@ -285,6 +317,7 @@
 
 			<div class="main-group--threads" id="main-group--threads">
 				<!-- Here be the past threads -->
+				
 			</div>
 		</section>
 	</div>
