Update comments and replies

--- a/templates/admin_group.html
+++ b/templates/admin_group.html
@@ -175,6 +175,18 @@
 								</div>
 							</div>
 							<div class="thread-nest">
+									<div class="comment-area">
+										<div class="comment-form">
+											<div class="textarea-container">
+												<textarea class="" placeholder="Reply..." reply-to="16"></textarea>
+												<div class="error-area"></div>
+											</div>
+											<div class="actions">
+												<button class="btn main-btn">Post</button>
+												<button class="btn">Cancel</button>
+											</div>
+										</div>
+									</div>
 								<div class="thread">
 									<div class="comment">
 										<div class="icon">
