--- a/css/comments.less
+++ b/css/comments.less
@@ -21,6 +21,8 @@
 
 			.btn {
 				margin-right: 10px;
+				margin-top: 1px;
+				margin-bottom: 1px;
 			}
 		}
 
@@ -79,7 +81,7 @@
 
 				.poster {
 					background-color: #3fb0ac;
-					font-size: 12px;
+					font-size: 14px;
 					line-height: 1.8em;
 					margin-right: 5px;
 					border-radius: 3px;
