--- a/css/styles.less
+++ b/css/styles.less
@@ -14,7 +14,7 @@
 @prologes-icon-active: #3fb0ac;
 @prologes-icon-disabled: #e7e7e7;
 
-@prologes-nav-background: #3fb0ac;
+@prologes-nav-background: #59A09C;
 @prologes-nav-color: #ffffff;
 @prologes-nav-border: #e7e7e7;
 
@@ -177,6 +177,7 @@ body {
 		color: @prologes-nav-color;
 		border-color: @prologes-nav-border;
 		border-radius: 0 !important;
+		box-shadow: 1px 1px 2px #888888;
 
 		.logo {
     		max-height: 35px;
@@ -188,11 +189,16 @@ body {
 		}
 		
 		.navbar-nav > li > a {
- 			line-height: 55px;
+ 			line-height: 50px;
+			width: 100%;
+  			
 		}
 		
 		i.icon-black {
     		color: black;
+			padding-left: 6px;
+      		padding-right: 6px;
+			padding-top: 24px;
 		}
 	}
 
