--- a/css/group.less
+++ b/css/group.less
@@ -1,27 +1,35 @@
 // Group section
 @import "styles.less";
 
+@tab-border-color: #DDDBDB;
+
 #main-group--editable {
 	display: none;
 }
 
 .profile-section {
 	background: white;
-	position: relative;
-	top: 40px;
-	left: 20px; 
-	max-width: 60%;
-	padding: 10px 10px 16px 10px;
-	border: 1px solid #DDDBDB;
+	padding: 0px 10px 16px 10px;
+	border: 1px solid @tab-border-color;
+	max-width: 55%;
+	transform: translate(-35px);
 	
 	.profile-image {
 		max-width: 100%;
+		padding: 50px 20px 30px 20px;
+	}
+	
+	.edit-image-profile {
+		position: absolute;
+		top: 8px;
+		left: 140px;
 	}
 	
 	.btn.join-btn {
-		background-color: @main-button-color;
+		background-color: #60ADA8;
 		color: @main-button-text;
-		box-shadow: 2px 2px 8px #888888; 
+		font-family: Raleway;
+		box-shadow: 1px 1px 4px #888888; 
 
 		&:focus,
 		&:hover {
@@ -31,142 +39,12 @@
 }
 }
 
-.main-group {
 
-	display: flex;
-  	justify-content: flex-start;
-  	margin-bottom: 20px;
-  	flex-wrap: wrap;
-
-  .info {
-    text-align: center;
-  }
-
-  .horizontal {
-    flex-direction: row;
-    display: flex;
-    width: 100%;
-
-    .info {
-      margin-top: 20px;
-    }
-
-    .left {
-      justify-content: center;
-    }
-
-    .right {
-      margin-left: 15px;
-      margin-top: 10px;
-      width: 100%;
-
-      .description {
-        margin-top: 15px;
-
-        // More means is collapsed
-        .content.more {
-          max-height: 80px;
-          overflow: hidden;
-        }
-
-        .more-toggle.expanded {
-          .more {
-            display: none;
-          }
-        }
-        .more-toggle:not(.expanded) {
-          .less {
-            display: none;
-          }
-        }
-      }
-    }
-
-    .icon {
-      margin-top: 10px;
-
-      img {
-
-      }
-    }
-
-    .actions {
-      margin-top: 12px;
-      display: flex;
-      justify-content: center;
-    }
-  }
-
-  .vertical {
-    flex-direction: column;
-    justify-content: center;
-
-    .info {
-      justify-content: center;
-    }
-  }
-
-  .icon {
-    //
-  }
-
-  .info {
-    .display-name {
-      font-size: 20px;
-      font-weight: 600;
-      color: @name-color;
-    }
-
-    .handle {
-      margin-top: 10px;
-      color: @handler-color;
-      font-size: 16px;
-    }
-  }
-
-	.info-panel {
-		margin-left: 20px;
-		margin-top: 10px;
-
-		.title {
-			font-size: 32px;
-			font-weight: 600;
-			font-family: Lora;
-			padding-top: 20px;
-		}
-
-		.handle {
-			color: @handler-color;
-			font-size: 18px;
-			font-family: Raleway;
-		}
-
-		.description {
-			margin-top: 10px;
-			font-size: 14px;
-			font-family: Raleway;
-			padding-bottom: 40px;
-
-			textarea {
-				height: 130px;
-				line-height: 2em;
-			}
-		}
-	}
-
-	
-	.group-membership {
-		margin-top: 20px;
-	}
-	
-}
-
-.main-group--members {
+.members-section {
+	max-width: 75%;
+	padding-top: 30px;
 	font-family: Lora;
-	font-size: 26px;
-	padding-top: 80px;
-	padding-bottom: 10px; 
-	padding-left: 20px;
+	font-size: 22px;
 }
 
 .group-member {
@@ -174,7 +52,8 @@
 	justify-content: flex-start;
 	margin-top: 5px;
 	font-family: Raleway;
-	padding-left: 20px;
+	font-size: 12px;
+
 
 	.info {
 		display: flex;
@@ -228,6 +107,78 @@
 	}
 }
 
+.club-description-section {
+	
+		.title {
+			font-size: 40px;
+			font-weight: 300;
+			font-family: Lora;
+			width: 100%;
+			padding-left: 5px;
+		}
+
+		.handle {
+			color: @handler-color;
+			font-size: 18px;
+			font-family: Raleway;
+			padding-left: 5px;
+		}
+
+		.description {
+			margin-top: 10px;
+			font-size: 14px;
+			font-family: Raleway;
+			width: 100%;
+			padding-left: 5px;
+		}
+	
+	.inline-editable {
+		background: @tab-border-color;
+		max-height: 55px;
+		max-width: 500px;
+		border: none;
+		resize: none !important;
+		overflow: hidden !important;
+		border-radius: 3px; 
+	}
+	
+	.inline-editable:disabled {
+		background: transparent !important;
+	}
+	
+	.inline-editable:focus {
+		outline: none !important;
+   	 	border-bottom:4px solid @contrasting-color;
+	}
+	
+	.edit-button {
+		background: transparent;
+    	border: none;
+    	cursor: pointer;
+		position: absolute;
+      	top: 40%;
+	}
+	
+	#save-club-description-button {
+		border: none;
+		background: transparent !important;
+		color: @contrasting-color;
+		padding-bottom: 40px;
+		padding-left: 20px;
+	}
+	
+	#cancel-club-description-button {
+		border: none;
+		background: transparent !important;
+		padding-bottom: 50px;
+	}
+}
+
+.comment-section {
+	max-width: 90%;
+	padding-top: 60px;
+}
+
 .actions {
 	  margin-top: 10px;
 	  display: flex;
@@ -235,23 +186,33 @@
 	  font-family: Raleway;
   }
 
+.actions-container {
+	margin-bottom: -5px;
+}
+
 .side-tab-panel {
-	position: relative;
-	top: 40px;
+	max-width: 85%;
 	font-family: Raleway;
+	padding-right: 20px;
+	
+	.nav-tabs > li > a {
+		background-color: @tab-border-color;
+		color: black !important;
+	}
 }
 
 .reading-panel {
 	background: white;
 	max-height: auto;
-	border-left: 1px solid #DDDBDB;
-	border-right: 1px solid #DDDBDB;
-	border-bottom: 1px solid #DDDBDB;
+	border-left: 1px solid @tab-border-color;
+	border-right: 1px solid @tab-border-color;
+	border-bottom: 1px solid @tab-border-color;
 
 	.title-reading {
 		font-family: Lora;
 		font-size: 22px;
 		padding-top: 50px;
+		margin-bottom: 60px;
 	}
 
   	.info {
@@ -263,23 +224,51 @@
 	
 		font-family: Raleway;
 		font-size: 14px;
-		padding-bottom: 20px;
+		padding-top: 40px;
+		padding-bottom: 60px;
   }
 	
-	.book-image {
+	.edit-image {
+		position: absolute;
+		top: 122px;
+		left: 212px;
+	}
+	
+	.reading-image {
 		max-width: 60%;
-		padding-top: 40px;
-		padding-bottom: 40px;
+		border: solid 1px @tab-border-color;
+		padding: 35px 20px 20px 20px;
+		margin-top: 30px;
+	}
+	
+	.next-up-image {
+		max-width: 60%;
+		border: solid 1px @tab-border-color;
+		padding: 30px 20px 20px 20px;	
+		margin-top: 30px;
 	}
 	
 	.panel-title {
 		font-family: Raleway;
 		font-size: 12px;
 		color: black;
+		position: absolute;
+  		bottom: 0;
+		padding-bottom: 10px;
+        left: 50%;
+        margin-right: -50%;
+        transform: translate(-50%, -50%)
 	}
 
 	.book > img {
-		max-width: 50%;
+		max-width: 60%;
+		padding-top: 50px;
+		padding-bottom: 50px;
+	}
+	
+	.book > span {
+		font-family: Raleway;
+		font-size: 12px;
 	}
 	
 	.panel-heading  a:before {
@@ -297,7 +286,6 @@
 }
 
 .comment-area {
-	max-width: 600px;
 	font-family: Raleway;
 }
 
