--- a/css/group.less
+++ b/css/group.less
@@ -42,9 +42,14 @@
 
 .members-section {
 	max-width: 75%;
-	padding-top: 30px;
+	padding-top: 40px;
+}
+
+.member-title {
+	margin-top: 30px;
+	margin-bottom: 10px;
+	font-size: 24px;
 	font-family: Lora;
-	font-size: 22px;
 }
 
 .group-member {
