--- a/templates/anon_group.html
+++ b/templates/anon_group.html
@@ -69,7 +69,9 @@
 
 				<!-- Members section -->
 				<section class="members-section center-block">
-					<h2>Members</h2>
+					<div class="member-title">
+					Members
+					</div>
 					<div class="group--members">
 						<!-- Sample member style -->
 						<div class="group-member">
@@ -138,16 +140,6 @@
 									</div>	
 									<!--  -->
 								</div>
-								
-								<ul class="comment-list">
-									<li class="comment">
-									
-									
-									</li>
-								
-								</ul>
-									
-
 							</section>
 			</div>
 
