--- a/css/group.less
+++ b/css/group.less
@@ -231,6 +231,10 @@
 		font-size: 14px;
 		padding-top: 40px;
 		padding-bottom: 60px;
+		
+		a {
+			color: @contrasting-color;
+		}
   }
 	
 	.edit-image {
