--- a/css/styles.less
+++ b/css/styles.less
@@ -193,6 +193,7 @@ body {
 		.navbar-nav {
 			list-style-type: none;
 			padding-right: 13px; 
+			cursor: pointer;
 		}
 		
 		.navbar-nav > li > a {
@@ -200,6 +201,10 @@ body {
 			width: 100%;
 			max-height: 80%
   			
+		}
+		
+		.dropdown-content a:hover {
+			background-color: @contrasting-color;
 		}
 		
 		i.icon-black {
