--- a/templates/anon_group.html
+++ b/templates/anon_group.html
@@ -28,28 +28,40 @@
 		
 <div class="collapse navbar-collapse" id="navbarCollapse">
 
-	<ul class="navbar-nav navbar-right">
-		<li class="nav-item">
-			<a class="nav-link">
-				<i class="material-icons icon-black">person</i>
-			</a>
+	<ul class="navbar-nav navbar-right nav-flex-icons">
+		<li class="nav-item-profile dropdown">
+        	<a class="nav-link profile-dropdown-toggle" id="navbarProfileDropdownMenuLink-333" data-toggle="dropdown" aria-haspopup="true"
+          aria-expanded="false">
+          		<i class="material-icons icon-black">person</i>
+        	</a>
+				<ul role="menu" class="dropdown-menu">
+		<li>
+			<a href="#">Profile</a>
 		</li>
+		<li>
+			<a href="#">My library</a>
+		</li>
+		<li>
+			<a href="#">Log out</a>
+		</li>
+				</ul>
+		</li>	
 		
-		<li class="nav-item dropdown">
-			<a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown" aria-haspopup="true"
-				  aria-expanded="false">
-				<i class="material-icons icon-black">language</i>
-			</a>
-	<ul role="menu" class="dropdown-menu">
+		<li class="nav-item-language dropdown">
+        	<a class="nav-link language-dropdown-toggle" id="navbarLanguageDropdownMenuLink-333" data-toggle="dropdown" aria-haspopup="true"
+          aria-expanded="false">
+         		 <i class="material-icons icon-black">language</i>
+        	</a>
+      			<ul role="menu" class="dropdown-menu">
 		<li>
 			<a href="#">English</a>
 		</li>
 		<li>
 			<a href="#">Español</a>
 		</li>
-	</ul>
-		</li>
-	</ul>
+				</ul>
+      	</li>
+    </ul>
 </div>
 	</nav>	
 		
