--- a/css/group.less
+++ b/css/group.less
@@ -14,19 +14,92 @@
 	max-width: 55%;
 	transform: translate(-35px);
 	
-	.profile-image {
-		max-width: 100%;
-		padding: 50px 20px 30px 20px;
+	.edit-profile-image {
+		color: black;
+		text-decoration: none;
+		font-family: Raleway;
+		font-size: 10px;
+		transition: all 0.5s;
+		float: right;
+		
+		position: absolute;
+		top: 10px;
+		right: 10px;
 	}
 	
-	.edit-image-profile {
+	.edit-profile-dialog {
+		transform: translate(-10px);
+		background-color: rgba(255,255,255,0.75);
 		position: absolute;
-		top: 8px;
-		left: 140px;
+		top: 10%;
+		right: 5%;
+		border-radius: 10px;
+		transform: translate(0, -10%);
+		width: 90%;
+		height: 90%;
+	}
+	
+			
+	.btn-btn-primary {
+		background: @contrasting-color;
+		margin-top: 90px;
+		border: none;
+		border-radius: 2px 2px 2px 2px;
+		box-shadow: 1px 1px 4px #888888;
+		font-family: Raleway;
+	}
+	
+	.inputDnD {
+		  .form-control-file {
+			width: 80%;
+			height: 70%;
+			min-height: 80px;
+			outline: none;
+			visibility: hidden;
+			cursor: pointer;
+			
+			&:before {
+			  content: attr(data-title);
+			  text-align: center;
+			  
+			  position: absolute;
+			  top: 10px;
+			  left: 10px;
+			  right: 10px;
+			  bottom: 20px;
+			  
+			  border: 2px dashed black;
+   			  border-radius: 10px;
+   			  box-shadow: 0 0 0 4px transparent, 2px 1px 6px 4px transparent;
+				
+			  opacity: 1;
+			  visibility: visible;
+			  transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+			  overflow: hidden;
+			}
+			  
+			&:hover {
+			  &:before {
+				border-style: solid;
+			  }
+			}
+		  }
+		}
+	
+	.edit-profile-image:hover {
+		z-index: 10000;
+		color: green;
+		transition: all .3s ease;
+		text-decoration: none;
+	}
+	
+	.profile-image-placeholder {
+		max-width: 100%;
+		padding: 40px 20px 30px 20px;
 	}
 	
 	.btn.join-btn {
-		background-color: #60ADA8;
+		background-color: @contrasting-color;
 		color: @main-button-text;
 		font-family: Raleway;
 		box-shadow: 1px 1px 4px #888888; 
@@ -145,6 +218,7 @@
 		resize: none !important;
 		overflow: hidden !important;
 		border-radius: 3px; 
+		
 	}
 	
 	.inline-editable:disabled {
@@ -163,21 +237,22 @@
 		position: absolute;
       	top: 40%;
 	}
-	
-	#save-club-description-button {
+}
+
+	.save-btn {
 		border: none;
 		background: transparent !important;
 		color: @contrasting-color;
-		padding-bottom: 40px;
-		padding-left: 20px;
+		padding-bottom: 50px;
+		position: relative;
+		left: 10px;
 	}
 	
-	#cancel-club-description-button {
+	.cancel-btn {
 		border: none;
 		background: transparent !important;
 		padding-bottom: 50px;
 	}
-}
 
 .comment-section {
 	max-width: 90%;
@@ -238,35 +313,65 @@
   }
 	
 	.edit-reading-image {
+		color: black !important;
+		text-decoration: none;
+		margin-top: 10px;
+		font-family: Raleway;
+		font-size: 10px;
+		transition: all 0.5s;
+		float: right;
 		position: absolute;
-		top: 154px;
-		left: 210px;
+		top: 150px;
+		left: 148px;
 	}
+	
+	.reading-pic:hover {
+    
+    z-index: 10000;
+    color: black;
+    transition: all .3s ease;
+    text-decoration: none;
+} 
 	
 	.edit-nextup-image {
+		color: black !important;
+		text-decoration: none;
+		margin-top: 10px;
+		font-family: Raleway;
+		font-size: 10px;
+		transition: all 0.5s;
+		float: right;
 		position: absolute;
-		top: 154px;
-		left: 210px;
+		top: 150px;
+		left: 148px;
 	}
 	
-	.reading-image {
+	.nextup-pic:hover {
+    
+    z-index: 10000;
+    color: black;
+    transition: all .3s ease;
+    text-decoration: none;
+} 
+	
+	.reading-placeholder-image {
 		max-width: 60%;
 		border: solid 1px @tab-border-color;
-		padding: 35px 20px 20px 20px;
+		padding: 45px 20px 20px 20px;
 		margin-top: 30px;
 	}
 	
-	.next-up-image {
+	.nextup-placeholder-image {
 		max-width: 60%;
 		border: solid 1px @tab-border-color;
-		padding: 30px 20px 20px 20px;	
+		padding: 45px 20px 20px 20px;	
 		margin-top: 30px;
 	}
 	
 	.panel-title {
 		text-decoration: none;
 		font-family: Raleway;
-		font-size: 12px;
+		font-size: 10px;
 		color: black;
 		position: absolute;
   		bottom: 0;
@@ -274,6 +379,10 @@
         left: 50%;
         margin-right: -50%;
         transform: translate(-50%, -50%)
+	}
+	
+	.panel-group > a {
+		float: right;
 	}
 
 	.book {
