--- a/img/group.css
+++ b/img/group.css
@@ -734,17 +734,75 @@ body {
   max-width: 55%;
   transform: translate(-35px);
 }
-.profile-section .profile-image {
-  max-width: 100%;
-  padding: 50px 20px 30px 20px;
-}
-.profile-section .edit-image-profile {
+.profile-section .edit-profile-image {
+  color: black;
+  text-decoration: none;
+  font-family: Raleway;
+  font-size: 10px;
+  transition: all 0.5s;
+  float: right;
   position: absolute;
-  top: 8px;
-  left: 140px;
+  top: 10px;
+  right: 10px;
+}
+.profile-section .edit-profile-dialog {
+  transform: translate(-10px);
+  background-color: rgba(255, 255, 255, 0.75);
+  position: absolute;
+  top: 10%;
+  right: 5%;
+  border-radius: 10px;
+  transform: translate(0, -10%);
+  width: 90%;
+  height: 90%;
+}
+.profile-section .btn-btn-primary {
+  background: #59A09C;
+  margin-top: 90px;
+  border: none;
+  border-radius: 2px 2px 2px 2px;
+  box-shadow: 1px 1px 4px #888888;
+  font-family: Raleway;
+}
+.profile-section .inputDnD .form-control-file {
+  width: 80%;
+  height: 70%;
+  min-height: 80px;
+  outline: none;
+  visibility: hidden;
+  cursor: pointer;
+}
+.profile-section .inputDnD .form-control-file:before {
+  content: attr(data-title);
+  text-align: center;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  right: 10px;
+  bottom: 20px;
+  border: 2px dashed black;
+  border-radius: 10px;
+  box-shadow: 0 0 0 4px transparent, 2px 1px 6px 4px transparent;
+  opacity: 1;
+  visibility: visible;
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  overflow: hidden;
+}
+.profile-section .inputDnD .form-control-file:hover:before {
+  border-style: solid;
+}
+.profile-section .edit-profile-image:hover {
+  z-index: 10000;
+  color: green;
+  transition: all .3s ease;
+  text-decoration: none;
+}
+.profile-section .profile-image-placeholder {
+  max-width: 100%;
+  padding: 40px 20px 30px 20px;
 }
 .profile-section .btn.join-btn {
-  background-color: #60ADA8;
+  background-color: #59A09C;
   color: #fff;
   font-family: Raleway;
   box-shadow: 1px 1px 4px #888888;
@@ -852,14 +910,15 @@ body {
   position: absolute;
   top: 40%;
 }
-.club-description-section #save-club-description-button {
+.save-btn {
   border: none;
   background: transparent !important;
   color: #59A09C;
-  padding-bottom: 40px;
-  padding-left: 20px;
+  padding-bottom: 50px;
+  position: relative;
+  left: 10px;
 }
-.club-description-section #cancel-club-description-button {
+.cancel-btn {
   border: none;
   background: transparent !important;
   padding-bottom: 50px;
@@ -914,31 +973,57 @@ body {
   color: #59A09C;
 }
 .reading-panel .edit-reading-image {
+  color: black !important;
+  text-decoration: none;
+  margin-top: 10px;
+  font-family: Raleway;
+  font-size: 10px;
+  transition: all 0.5s;
+  float: right;
   position: absolute;
-  top: 154px;
-  left: 210px;
+  top: 150px;
+  left: 148px;
+}
+.reading-panel .reading-pic:hover {
+  z-index: 10000;
+  color: black;
+  transition: all .3s ease;
+  text-decoration: none;
 }
 .reading-panel .edit-nextup-image {
+  color: black !important;
+  text-decoration: none;
+  margin-top: 10px;
+  font-family: Raleway;
+  font-size: 10px;
+  transition: all 0.5s;
+  float: right;
   position: absolute;
-  top: 154px;
-  left: 210px;
+  top: 150px;
+  left: 148px;
 }
-.reading-panel .reading-image {
+.reading-panel .nextup-pic:hover {
+  z-index: 10000;
+  color: black;
+  transition: all .3s ease;
+  text-decoration: none;
+}
+.reading-panel .reading-placeholder-image {
   max-width: 60%;
   border: solid 1px #DDDBDB;
-  padding: 35px 20px 20px 20px;
+  padding: 45px 20px 20px 20px;
   margin-top: 30px;
 }
-.reading-panel .next-up-image {
+.reading-panel .nextup-placeholder-image {
   max-width: 60%;
   border: solid 1px #DDDBDB;
-  padding: 30px 20px 20px 20px;
+  padding: 45px 20px 20px 20px;
   margin-top: 30px;
 }
 .reading-panel .panel-title {
   text-decoration: none;
   font-family: Raleway;
-  font-size: 12px;
+  font-size: 10px;
   color: black;
   position: absolute;
   bottom: 0;
@@ -946,6 +1031,9 @@ body {
   left: 50%;
   margin-right: -50%;
   transform: translate(-50%, -50%);
+}
+.reading-panel .panel-group > a {
+  float: right;
 }
 .reading-panel .book {
   padding-top: 50px;
