--- a/templates/anon_group.html
+++ b/templates/anon_group.html
@@ -4,7 +4,6 @@
 	<head>
 		<meta charset="UTF-8">
 		
-		<link rel="stylesheet/less" href="../css/styles.less">
 		<link rel="stylesheet/less" href="../css/group.less">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
@@ -74,7 +73,7 @@
 				<!-- Profile Section -->
 				<section class="profile-section center-block">
 					
-					<img class="profile-image center-block" src="../img/Profile.placeholder.png" alt="profile-image-alt">
+					<img class="profile-image-placeholder center-block" src="../img/Profile.placeholder.png" alt="profile-image-alt">
 
 					<button class="btn join-btn center-block">JOIN</button>
 				</section>
@@ -180,7 +179,7 @@
 									<div class="title-reading text-center">
 										Currently Reading
 									
-									<img class="reading-image" src="../img/easychair_colour.png" alt= "book">
+									<img class="reading-placeholder-image" src="../img/easychair_colour.png" alt= "book">
 										
 									<div class="info">
 										<a href="#">Title of the book</a>
@@ -205,7 +204,7 @@
 													<div class="book">
 														<img src="../img/book.png" alt="book" class="center-block">
 														
-														<span class="title center-block">Title of the book</span>
+														<a href="#">Title of the book</a>
 														<span class="author center-block">Author 1, Author 2</span>
 														
 													</div>
@@ -228,7 +227,7 @@
 									<div class="title-reading text-center">
 										Next Up
 									
-									<img class="next-up-image center-block" src="../img/Stack.png" alt= "book">
+									<img class="nextup-placeholder-image center-block" src="../img/Stack.png" alt= "book">
 										
 									<div class="info">
 										<a href="#">Title of the book</a>
@@ -251,10 +250,10 @@
 										
 													<!-- Sample books -->
 													<div class="book">
-														<img src="../img/book_clear.png" alt="book" class="center-block">
+														<img src="../img/book.png" alt="book" class="center-block">
 														
-														<span class="title center-block">Title of the book</span>
-														<span class="author center-block">Author 1, Author 2</span>
+														<a href="#">Title of the book</a>
+														<span class="author center-block">Author</span>
 														
 													</div>
 												</div>
