Profile image section
Added edit profile image section
Made members placeholder images black

--- a/templates/admin_group.html
+++ b/templates/admin_group.html
@@ -6,7 +6,6 @@
 		
 		<link rel="stylesheet/less" href="../css/group.less">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    	<script src="../dist/jquery.cropit.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js" ></script>
 		<link rel="icon" type="image/png" href="/prologes/img/favicon.png" />
@@ -81,8 +80,6 @@
         					<input type="file" class="form-control-file" id="inputFile" accept="image/*" onchange="readUrl(this)" data-title="Or drag & drop">
       					</div>
 						
-						<button class="btn-btn-primary center-block">Browse</button>
-						
 						<div class="center-block">
 							
 							<button class="save-btn" id="edit-profile-save-button">Save</button>
@@ -109,7 +106,7 @@
 						<!-- Sample member style -->
 						<div class="group-member">
 							<div class="icon">
-								<img class="icon" src="../img/user_clear.png" alt="icon">
+								<img class="icon" src="../img/Profile.placeholder.png" alt="icon">
 							</div>
 							
 							<div class="info">
@@ -120,7 +117,7 @@
 
 						<div class="group-member">
 							<div class="icon">
-								<img class="icon" src="../img/user_clear.png" alt="icon">
+								<img class="icon" src="../img/Profile.placeholder.png" alt="icon">
 							</div>
 							<div class="info">
 								<div class="display-name"><a href="#"><div>Average user X</div></a></div>
@@ -130,7 +127,7 @@
 
 						<div class="group-member">
 							<div class="icon">
-								<img class="icon" src="../img/user_clear.png" alt= "icon">
+								<img class="icon" src="../img/Profile.placeholder.png" alt= "icon">
 							</div>
 							<div class="info">
 								<div class="display-name"><a href="#"><div>Normal user</div></a></div>
