--- a/css/group.less
+++ b/css/group.less
@@ -27,13 +27,20 @@
 		right: 10px;
 	}
 	
+		.edit-profile-image:hover {
+		z-index: 10000;
+		color: @contrasting-color;
+		transition: all .3s ease;
+		text-decoration: none;
+	}
+	
 	.edit-profile-dialog {
 		transform: translate(-10px);
 		background-color: rgba(255,255,255,0.75);
 		position: absolute;
 		top: 10%;
 		right: 5%;
-		border-radius: 10px;
+		border-radius: 2px;
 		transform: translate(0, -10%);
 		width: 90%;
 		height: 90%;
@@ -49,16 +56,9 @@
 		font-family: Raleway;
 	}
 	
-	.edit-profile-image:hover {
-		z-index: 10000;
-		color: green;
-		transition: all .3s ease;
-		text-decoration: none;
-	}
-	
 	.profile-image-placeholder {
 		max-width: 100%;
-		padding: 40px 20px 30px 20px;
+		padding: 60px 20px 30px 20px;
 	}
 	
 	.btn.join-btn {
@@ -120,7 +120,7 @@
 		.user-name {
 
 			a {
-			 color: @handler-color;
+			 color: 	@handler-color;
 			 font-size: 12px;
 			 overflow: hidden;
 			 text-overflow: ellipsis;
@@ -244,6 +244,67 @@
 	}
 }
 
+.wishlist-panel {
+	background: white;
+	max-height: auto;
+	max-width: 250px;
+	border-left: 1px solid @tab-border-color;
+	border-right: 1px solid @tab-border-color;
+	border-bottom: 1px solid @tab-border-color;
+	border-top: 1px solid @tab-border-color;
+	
+	.wishlist-content {
+		padding: 10px;
+		position: relative;
+	}
+	
+	.dropdown {
+		position: absolute;
+		cursor: pointer;
+		left: 60px;
+		colour: black !important;
+		transition: all 0.5s;
+		top: 12px;
+		
+	}
+	
+	.dropdown:hover {
+		z-index: 10000;
+		color: @contrasting-color;
+		transition: all .3s ease;
+		text-decoration: none;
+	}
+	
+	.title-wishlist {
+		font-family: Lora;
+		font-size: 22px;
+		padding-top: 50px;
+		margin-bottom: 60px;
+		align-content: center;
+	}
+	
+	.wishlist-image {
+		position: relative;
+		width: 30%;
+		padding: 20px 5px 10px 5px;
+		border: 1px solid @tab-border-color;
+		
+	}
+	
+  	.wishlist-info {
+		font-family: Raleway;
+		font-size: 14px;
+		padding-left: 10px;
+		white-space: pre-line;
+		display: inline-block;
+		vertical-align: middle;
+		
+		a {
+			color: @contrasting-color;
+		}
+  }
+}
+
 .reading-panel {
 	background: white;
 	max-height: auto;
@@ -276,25 +337,35 @@
   }
 	
 	.edit-reading-image {
-		color: black !important;
+		color: black;
 		text-decoration: none;
-		margin-top: 10px;
 		font-family: Raleway;
 		font-size: 10px;
 		transition: all 0.5s;
 		float: right;
 		position: absolute;
-		top: 150px;
-		left: 148px;
+		top: 160px;
+		right: 120px;
 	}
 	
-	.reading-pic:hover {
-    
-    z-index: 10000;
-    color: black;
-    transition: all .3s ease;
-    text-decoration: none;
-} 
+	.edit-reading-image:hover {
+		z-index: 10000;
+		color: @contrasting-color;
+		transition: all .3s ease;
+		text-decoration: none;
+	}
+	
+	.edit-reading-dialog {
+		transform: translate(-10px);
+		background-color: rgba(255,255,255,0.75);
+		position: absolute;
+		top: 10%;
+		right: 5%;
+		border-radius: 2px;
+		transform: translate(0, -10%);
+		width: 90%;
+		height: 90%;
+	}
 	
 	.edit-nextup-image {
 		color: black !important;
