--- a/templates/admin_group.html
+++ b/templates/admin_group.html
@@ -77,7 +77,7 @@
 						
 						
 						<div class="form-group inputDnD">
-        					<input type="file" class="form-control-file" id="inputFile" accept="image/*" onchange="readUrl(this)" data-title="Or drag & drop">
+        					<input type="file" class="form-control-file" id="inputFile" accept="image/*" onchange="readUrl(this)">
       					</div>
 						
 						<div class="center-block">
@@ -187,139 +187,106 @@
 			<!-- Right panel (books panels: reading|wishlist|read) -->
 			<div class="col-md-3">
 
-					<!-- Tab panel -->
-					<div class="side-tab-panel center-block">
+						<!--Wishlist-->
+				<section class="wishlist-panel center-block">
+								
+					<div class="title-wishlist text-center">
+							Wishlist
+					</div>
+					
+					
+					<!-- Sample books -->
+					<div class="wishlist-content">
+				
+						<img class="wishlist-image" src="../img/book.png" alt="wishlist-image-alt">
 						
-							<ul class="nav nav-tabs">
-								<li class="active">
-									<a href="#tab-reading" data-toggle="tab" id="tab-reading--anchor">Reading</a>
+							<div class="dropdown">
+								<a data-toggle="dropdown"> 
+									<i class="material-icons icon-black">more_vert</i>
+								</a>
+
+							<ul class="dropdown-menu" role="menu">
+								<li>
+									<a href="#">Add to Read</a>
 								</li>
 								<li>
-									<a href="#tab-up_next" data-toggle="tab" id="tab-wishlist--anchor">Next Up</a>
+									<a href="#">Add to Next-up</a>
+								</li>
+								<li>
+									<a href="#">Remove</a>
 								</li>
 							</ul>
+							</div>
+						
+						<div class="wishlist-info">
+							<a href="#">Title of the book</a>
+							<span class="author">Author</span>
+						</div>
+					</div>
+						
+						
+					<div class="wishlist-content">
+						
+						<img class="wishlist-image" src="../img/book.png" alt="wishlist-image-alt">
+						
+							<div class="dropdown">
+								<a data-toggle="dropdown"> 
+									<i class="material-icons icon-black">more_vert</i>
+								</a>
+
+							<ul class="dropdown-menu" role="menu">
+								<li>
+									<a href="#">Add to Read</a>
+								</li>
+								<li>
+									<a href="#">Add to Next-up</a>
+								</li>
+								<li>
+									<a href="#">Remove</a>
+								</li>
+							</ul>
+							</div>
+						
+						<div class="wishlist-info">
+							<a href="#">Title of the book</a>
+							<span class="author">Author</span>
+						</div>
+					</div>
 					
-						<div class="tab-content">
-							
-							<!-- Currently reading-->
-							<div class="tab-pane active fade in" id="tab-reading">
-								
-								<div class="reading-panel">
-								
-									<div class="title-reading text-center">
-										Currently Reading
-											
-										<a href="#" class="edit-reading-image">
-											
-      										<span class="glyphicon glyphicon-camera"></span>
-     										<span>Change Image</span>
+					<div class="wishlist-content">
+						
+						<img class="wishlist-image" src="../img/book.png" alt="wishlist-image-alt">
+						
+							<div class="dropdown">
+								<a data-toggle="dropdown"> 
+									<i class="material-icons icon-black">more_vert</i>
+								</a>
 
-										</a>
-										
-										<img class="reading-placeholder-image" src="../img/easychair_colour.png" alt= "book">
-										
-									<div class="info">
-										<a href="#">Title of the book</a>
-										<span class="author">Author</span>
-									</div>
-										
-									<div class="panel-group" id="reading-panel-group" role="tablist">
-  										<div class="">
-											<div class = "panel-heading" role="tab">
-      											<h4 class="panel-title">
-        											<a role="button" data-toggle="collapse" data-parent="#reading-panel-group" href="#else-reading-panel">
-														See what else we are reading
-													</a>
-      											</h4>
-											</div>
-											
-											<div class="panel-collapse collapse" role="tabpanel" id="else-reading-panel">
-
-												<div class="panel-body">
-										
-													<!-- Sample books -->
-													<div class="book">
-														<img src="../img/book.png" alt="book" class="center-block">
-														
-														<a href="#">Title of the book</a>
-														<span class="author center-block">Author</span>
-														
-													</div>
-												</div>
-												
-											</div>
-  										</div>
-									</div>
-									
-								</div>
+							<ul class="dropdown-menu" role="menu">
+								<li>
+									<a href="#">Add to Read</a>
+								</li>
+								<li>
+									<a href="#">Add to Next-up</a>
+								</li>
+								<li>
+									<a href="#">Remove</a>
+								</li>
+							</ul>
 							</div>
-								
+						
+						<div class="wishlist-info">
+							<a href="#">Title of the book</a>
+							<span class="author">Author</span>
 						</div>
-
-							<!-- Next up -->
-							<div class="tab-pane fade" id="tab-up_next">
+					</div>
+					
+				</section>		
+			</div>			
 								
-								<div class="reading-panel">
-								
-									<div class="title-reading text-center">
-										Next Up
-										
-										<a href="#" class="edit-nextup-image">
-											
-  											<div class="nextup-pic" style="background-image: url('https://s3-eu-west-1.amazonaws.com/lynks-blog/wp-content/uploads/2016/10/11153439/rsz_1shutterstock_325243652.jpg')" >
-
-      										<span class="glyphicon glyphicon-camera"></span>
-     										<span>Change Image</span>
-
- 						 					</div>
-										</a>
-									
-										<img class="nextup-placeholder-image center-block" src="../img/Stack.png" alt= "book">
-										
-									<div class="info">
-										<a href="#">Title of the book</a>
-										<span class="author">Author</span>
-									</div>
-										
-									<div class="panel-group" id="next-up-panel-group" role="tablist">
-  										<div class="">
-											<div class = "panel-heading" role="tab">
-      											<h4 class="panel-title">
-        											<a role="button" data-toggle="collapse" data-parent="#next-up-panel-group" href="#else-reading-next-panel">
-														See what else we want to read
-													</a>
-      											</h4>
-											</div>
-											
-											<div class="panel-collapse collapse" role="tabpanel" id="else-reading-next-panel">
-
-												<div class="panel-body">
-										
-													<!-- Sample books -->
-													<div class="book">
-														<img src="../img/book.png" alt="book" class="center-block">
-														
-														<a href="#">Title of the book</a>
-														<span class="author center-block">Author</span>
-														
-													</div>
-												</div>
-												
-											</div>
-  										</div>
-									</div>
-									
-								</div>
-							</div>
-								
-						</div>
-					</div> 
-					<!-- First reading -->
-				</div>
-
-			</div>
-		</div>
-
+				
+				
+						
 	<!-- FOOTER -->
 	<footer>
 		<div class="container-fluid">
