--- a/css/styles.less
+++ b/css/styles.less
@@ -35,6 +35,8 @@
 
 @section-background-color: #fff;
 
+@link-color: @handler-color;
+
 // @tablet: ~"(min-width:520px) and (max-width:944px)"; // small from 768 - 992
 @tablet: ~"(min-width:768px) and (max-width:991px)";
 // @phone: ~"(max-width:519px)"; // xs less than 768
